Revision history for Catmandu-BibTeX

{{$NEXT}}

0.15  2019-12-20 08:43:00 CET
  - add fix latex_decode

0.14  2019-07-04 09:34:49 CEST
  - fix typo

0.13  2019-07-03 15:45:24 CEST
  - fix typo (keyword --> keywords) in exporter

0.12  2019-06-25 16:14:43 CEST
  - use Test2::V0 for test
  - travis-ci update

0.11  2019-01-15 13:29:22 CET
  - provide VERSION for all *.pm files

0.10  2019-01-15 13:26:40 CET
  - make exporter idempotent

0.08  2017-01-17 08:01:25 CET
  - support importing authors/editors as if,
    i.e. single authors will be SCALARs and multiple authors
    will be ARRAYs

0.07  2015-08-26 10:29:12 CEST
  - remove latex_encode, leave utf-8 untouched

0.06  2014-09-30 09:36:49 CEST
  - well, see 0.05

0.05  2014-09-29 18:16:59 CEST
  - moved to milla
  - tests + badges

0.04  2014-03-04
  - date expansion
  - default citekey starts at 1
  - document default citekey
  - fix roundtripping
  - add project links to build script

0.03  2013-06-24
  - BibTeX importer

0.02  2013-06-12
  - initial release