@@ -1,10 +1,17 @@
-!.gitignore
-/Catmandu-BibTeX-*
-/.build
-/_build*
-/Build
-local/*
+*.swp
+.DS_Store
+.build
+.perl-version
+.tidyall.d/
+Build
+/Catmandu-*
+LICENSE
+MANIFEST*
+META.json
 MYMETA.*
-!META.json
-/.prove
+Makefile.PL
+_build
+blib
+cover_db
 cpanfile.snapshot
+local
