@@ -1,6 +1,8 @@
 Revision history for Catmandu-BibTeX
 
 {{$NEXT}}
+  - translate latex field values to unicode
+  - better author/editor field handling
 
 0.15  2019-12-20 08:43:00 CET
   - add fix latex_decode
